--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 
 
-#cookie-click {
+#cookie-btn {
     background-image: url(/images/cookie-icon.webp);
     background-size: cover;
     width: 150px;
