correction url img dans css

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #cookie-btn {
-    background-image: url(/images/cookie-icon.webp);
+    background-image: url(images/cookie-icon.webp);
     background-size: cover;
     width: 150px;
     height: 150px;
