--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,46 @@
   background-color: #ECD4D4;
   margin: auto;
 }
+
+.x2 {
+
+    background: url("../images/multiply-2.png") transparent center no-repeat;
+    
+    width: 50px;
+    height: 50px;
+    /* border: none; */
+}
+
+.x10 {
+
+  background: url("../images/multiply-10.png") transparent center no-repeat;
+  width: 50px;
+  height: 50px;
+  /* border: none; */
+}
+
+.x50 {
+
+  background: url("../images/multiply-50.png") transparent center no-repeat;
+  width: 50px;
+  height: 50px;
+  /* border: none; */
+
+}
+
+.x100 {
+
+  background: url("../images/multiply-100.png") transparent center no-repeat;
+  width: 50px;
+  height: 50px;
+  /* border: none; */
+}
+
+.hide {
+  display: none;
+}
+
+.hover:hover + .hide {
+  display: block;
+  color: red;
+}
