--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,35 @@
     width: 150px;
     height: 150px;
     border: none;
+    /* animation: rotation 4s infinite linear;
+ }
+
+ @keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  } */
+}
+
+#cookie-btn:active {
+  
+    -webkit-animation: bounce .2s infinite alternate;
+    -moz-animation: bounce .2s infinite alternate;
+    animation: bounce .2s infinite alternate;
+    -webkit-animation-iteration-count: 2;
+    -moz-animation-iteration-count: 2;
+    animation-iteration-count: 2;
+  }
+  @-webkit-keyframes bounce {
+    to { -webkit-transform: scale(1.2); }
+  }
+  @-moz-keyframes bounce {
+    to { -moz-transform: scale(1.2); }
+  }
+  @keyframes bounce {
+    to { transform: scale(1.2); }
   }
 
 .bg-main {
