--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-body {
-  overflow: hidden;
-}
-
-
 #cookie-btn {
 
   /* width: 100%;
@@ -19,11 +14,12 @@ body {
   width: 256px;
   height: 256px;
 
-  background: url("../images/perfectCookie.png");
+  background: url("../images/pokeball.png") center;
   background-size: 256px 256px;
   cursor: pointer;
   border: none;
   overflow: hidden;
+  margin: auto;
 
 
 
@@ -131,8 +127,8 @@ body {
 
 .info-cookies {
 
-  background: #c5b793;
-  color: #fbf1d9;
+  background: #FF0000;
+  color: #ffffff;
 }
 
 
@@ -140,16 +136,25 @@ body {
 /* MODIFICATION TEXTE COULEURS  */
 
 .text-normal {
-  color: #a79a79;
+  color: #CC0000;
 }
 
 .titre {
-  color:#c5b793;
+  color:#363b81;
 }
 
 .bg-second {
 
-  background-color: #fff9e9;
-  color: #8c7f5d;
+  background-color: #5db9ff;
+  color: white;
 
+}
+
+.no-credit {
+  background: #1e4664;
+  color: white;
+}
+
+.store-title {
+  color: #FF0000;
 }
