--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,6 @@
 #cookie-btn {
 
-  /* width: 100%;
-  display: block;
-  height: 256px;
-  background: url("../images/perfectCookie.png");
-  background-size: cover;
-  cursor: pointer;
-  border: none;
-  overflow: hidden; */
+
 
   width: 100%;
   display: block;
@@ -63,6 +56,27 @@
   }
 }
 
+#pokebadge {
+  display: grid;
+}
+
+#badge-btn {
+  background: url("../images/badgeBoulder.png") center;
+  background-size: 50px 50px;
+  width: 100%;
+  display: block;
+  width: 50px;
+  height: 50px;
+  border: none;
+  z-index: 1000;
+
+}
+
+#pokebadge>button {
+  grid-area: 1/1;
+  place-self: center;
+}
+
 .bg-main {
 
   background-color: #8D7E7E;
@@ -70,10 +84,8 @@
 }
 
 /* .bg-second {
-
   background-color: #BEA6A6;
   color: white;
-
 } */
 
 .bg-sub-second {
@@ -164,4 +176,3 @@
   width: 48px;
   height: 48px;
 }
-
