--- a/css/style.css
+++ b/css/style.css
@@ -40,35 +40,6 @@
 
 @-webkit-keyframes bounce {
   to {
-    -webkit-transform: scale(1.15);
-  }
-}
-
-@-moz-keyframes bounce {
-  to {
-    -moz-transform: scale(1.15);
-  }
-}
-
-@keyframes bounce {
-  to {
-    transform: scale(1.15);
-  }
-}
-
-
-.img-button:active {
-
-  -webkit-animation: bounce .1s infinite alternate;
-  -moz-animation: bounce .1s infinite alternate;
-  animation: bounce .1s infinite alternate;
-  -webkit-animation-iteration-count: 2;
-  -moz-animation-iteration-count: 2;
-  animation-iteration-count: 2;
-}
-
-@-webkit-keyframes bounce {
-  to {
     -webkit-transform: scale(1.10);
   }
 }
@@ -82,6 +53,35 @@
 @keyframes bounce {
   to {
     transform: scale(1.10);
+  }
+}
+
+
+.img-button:active {
+
+  -webkit-animation: bounce .5s infinite alternate;
+  -moz-animation: bounce .5s infinite alternate;
+  animation: bounce .1s infinite alternate;
+  -webkit-animation-iteration-count: 2;
+  -moz-animation-iteration-count: 2;
+  animation-iteration-count: 2;
+}
+
+@-webkit-keyframes bounce {
+  to {
+    -webkit-transform: scale(1.35);
+  }
+}
+
+@-moz-keyframes bounce {
+  to {
+    -moz-transform: scale(1.35);
+  }
+}
+
+@keyframes bounce {
+  to {
+    transform: scale(1.35);
   }
 }
 
@@ -170,3 +170,9 @@
   width: 48px;
   height: 48px;
 }
+
+/* AUTO CLICKER EFFECTS  */
+
+
+
+
