--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ body {
   width: 256px;
   height: 256px;
 
-  background: url("../images/pokeball.png") center;
+  background-image: url("../images/pokeball.png");
+  background-color: transparent;
+  background-position: center;
   background-size: 256px 256px;
   cursor: pointer;
   border: none;
@@ -83,6 +85,8 @@ body {
   width: 50px;
   height: 50px;
   border: none;
+  visibility: hidden;
+  
 
 }
 
@@ -167,7 +171,11 @@ body {
 
 
 .hide {
-  display: none;
+  visibility: hidden;
+}
+
+.show {
+  visibility:visible;
 }
 
 .hover:hover+.hide {
