Added touch-action: manipulation; to body to disable additional non-standard gestures on touch-screens

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 body {
   overflow-x: hidden;
   font-family: 'pokemon_classicregular', Arial, sans-serif !important;
-  
+  touch-action: manipulation;
 }
 
 
